@@ -7,6 +7,8 @@ Changes in @NEW@:
       instead of branches.
     * The branch command has been removed.  Any potential branch should be 
       done with a shadow instead.
+    * The verify command now shows local changes on a local shadow instead
+      of a local branch
 
 Changes in 1.0.13:
   o Client Changes:
